Posiciona as imagens da sessão Colabore abaixo do texto e ajusta os espaçamentos

--- a/index.html
+++ b/index.html
@@ -102,59 +102,58 @@
   <div class="section-title text-center center">
     <div class="overlay">
       <h2>Colabore</h2>
-      <hr>
       <p>O projeto precisa muito da sua ajuda! São apenas dois voluntários fixos que auxiliam a organização e, além disso, não recebemos ajuda do governo. A Visão Social se mantêm exclusivamente por meio de doações. Veja como você pode colaborar:</p>
     </div>
   </div>
   <div class="container">
     <div class="row">
       <div class="col-sm-6">
-        <div class="colabore-simbolo">
-          <img class="img-responsive" src="img/simbolovoluntariado.png">
-        </div>
         <div class="colabore-texto">
           <h3>Voluntariado</h3>
           <p>Tem um tempinho livre? Faça-nos uma visita! Você pode aproveitar alguma de suas habilidades e fazer oficinas, ajudar na preparação das refeições, na limpeza do espaço ou, o mais importante, passar um tempo com as crianças!</p>
         </div>
+        <div class="colabore-simbolo coracao">
+          <img class="img-responsive" src="img/simbolovoluntariado.png">
+        </div>
       </div>
       <div class="col-sm-6">
-        <div class="colabore-simbolo">
-          <img class="img-responsive" src="img/simbololeite.png">
-        </div>
         <div class="colabore-texto">
           <h3>Doação de Alimentos</h3>
           <p>As crianças fazem as refeições na Visão Social. Veja o que mais elas consomem: leite, achocolatado, biscoito, açúcar, carne, frango, ovos e arroz.</p>
         </div>
+        <div class="colabore-simbolo leite">
+          <img class="img-responsive" src="img/simbololeite.png">
+        </div>
       </div>
     </div>
     <div class="row">
       <div class="col-sm-6">
-        <div class="colabore-simbolo">
-            <img class="img-responsive" src="img/simbolopapel.png">
-        </div>
         <div class="colabore-texto">
           <h3>Produtos de limpeza</h3>
           <p>Precisamos de papel higiênico e desinfetante.</p>
         </div>
+        <div class="colabore-simbolo papel-higienico">
+          <img class="img-responsive" src="img/simbolopapel.png">
+        </div>
       </div>
       <div class="col-sm-6">
-        <div class="colabore-simbolo">
-          <img class="img-responsive" src="img/simbolobrinquedo.png">
-        </div>
         <div class="colabore-texto">
           <h3>Brinquedos</h3>
           <p>Queremos montar um brinquedoteca! Você está com brinquedo parado em casa? Doe para a Visão Social. :)</p>
         </div>
+        <div class="colabore-simbolo brinquedo">
+          <img class="img-responsive" src="img/simbolobrinquedo.png">
+        </div>
       </div>
     </div>
     <div class="row">
-      <div class="col-sm-12">
-        <div class="colabore-simbolo">
-          <img class="img-responsive" src="img/simbolocomputador.png">
-        </div>
+      <div class="col-sm-6 col-sm-offset-3">
         <div class="colabore-texto">
           <h3>Informática</h3>
           <p>Temos apenas um computador para todas as crianças que atendemos. As que já estão em idade escolar precisam ter acesso à internet para fazer pesquisas para a escola. Se você tiver qualquer produto de informática em bom estado, nos avise. Podemos buscar. :)</p>
+        </div>
+        <div class="colabore-simbolo computador">
+          <img class="img-responsive" src="img/simbolocomputador.png">
         </div>
       </div>
     </div>
