--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
     <div class="row">
       <div class="col-sm-6">
         <div class="colabore-texto">
-          <h3>Produtos de limpeza</h3>
+          <h3>Produtos de Limpeza</h3>
           <p>Precisamos de papel higiênico e desinfetante.</p>
         </div>
         <div class="colabore-simbolo papel-higienico">
