Ajustes na sessão Atividades Desenvolvidas

--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
 <div id="o-que-e">
   <div class="container">
     <div class="row">
-      <div class="col-xs-12 col-md-6">
+      <div class="col-md-6">
         <img src="img/o-que-e.jpg" class="img-responsive" alt="O que é?">
       </div>
-      <div class="col-xs-12 col-md-6">
+      <div class="col-md-6">
         <div class="o-que-e-text">
           <h2>O que é?</h2>
           <hr>
@@ -85,14 +85,28 @@
   </div>
   <div class="container">
     <div class="row">
-      <div class="col-xs-12 col-sm-12">
-        <h3>Projeto Viver Bem</h3>
-        <p>As crianças atendidas na organização têm acesso às refeições principais do dia.</p>
-        <img src="img/lanche.jpeg" class="img-responsive">
-        <h3>Projeto Atenção Total</h3>
-        <p>Para ajudar no desenvolvimento escolar, o projeto oferece reforço escolar, aulas de leitura e de artes, além de atividades recreativas.</p>
-        <img src="img/biblioteca.jpeg" class="img-responsive">
-        <p>Precisamos melhorar muito! Infelizmente ainda não temos condições suficientes para expandir as atividades do projeto. Por isso, role a tela e veja como você pode nos ajudar:</p>
+      <div class="col-sm-6">
+        <div class="projeto-texto">
+          <h3>Projeto Viver Bem</h3>
+          <p>As crianças atendidas na organização têm acesso às refeições principais do dia.</p>
+        </div>
+        <div class="projeto-imagem">
+          <img src="img/lanche.jpeg" class="img-responsive lanche">
+        </div>
+      </div>
+      <div class="col-sm-6">
+        <div class="projeto-texto">
+          <h3>Projeto Atenção Total</h3>
+          <p>Para ajudar no desenvolvimento escolar, o projeto oferece reforço escolar, aulas de leitura e de artes, além de atividades recreativas.</p>
+        </div>
+        <div class="projeto-imagem">
+          <img src="img/biblioteca.jpeg" class="img-responsive biblioteca">
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-sm-12 mensagem">
+        <p>Precisamos melhorar muito! Infelizmente ainda não temos condições suficientes para expandir as atividades do projeto. Por isso, role a tela e veja como você pode nos ajudar.</p>
       </div>
     </div>
   </div>
