Ajustes na sessão Atividades Desenvolvidas

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
   <div class="container">
     <div class="row">
       <div class="col-sm-6">
-        <div class="projeto-texto">
+        <div class="projeto-viver-bem">
           <h3>Projeto Viver Bem</h3>
           <p>As crianças atendidas na organização têm acesso às refeições principais do dia.</p>
         </div>
@@ -95,7 +95,7 @@
         </div>
       </div>
       <div class="col-sm-6">
-        <div class="projeto-texto">
+        <div class="projeto-atencao-total">
           <h3>Projeto Atenção Total</h3>
           <p>Para ajudar no desenvolvimento escolar, o projeto oferece reforço escolar, aulas de leitura e de artes, além de atividades recreativas.</p>
         </div>
