Correção ortográfica, CDMA para CDCA

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
           <p>O Projeto Visão Social é uma organização sem fins lucrativos que tem como missão transformar a história de crianças, jovens e famílias em complexas situações de risco.</p>
           <p>A Visão Social foi criada para desenvolver atividades que resultem no aprimoramento do processo de ensino-aprendizagem e na redução das dificuldades escolares de crianças que passam por situações de conflito.</p>
           <p>Fazemos o possível para que elas possam alcançar o sonho de um futuro melhor. <3</p>
-          <p>A Visão Social possui registro no CAS - Conselho de Assistência Social, no CDMA - Conselho da Criança e do Adolescente e também possui cadastro na Promotoria de Justiça do Distrito Federal.</p>
+          <p>A Visão Social possui registro no CAS - Conselho de Assistência Social, no CDCA - Conselho da Criança e do Adolescente e também possui cadastro na Promotoria de Justiça do Distrito Federal.</p>
         </div>
       </div>
     </div>
