--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <title>Visão Social</title>
 <meta name="description" content="">
 <meta name="author" content="">
-<link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
+<link rel="shortcut icon" href="img/favicon-32x32.ico" type="image/x-icon">
 <link rel="stylesheet" type="text/css"  href="css/bootstrap.min.css">
 <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
 <link rel="stylesheet" type="text/css"  href="css/style.css">
