--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <link rel="shortcut icon" href="img/favicon-32x32.ico" type="image/x-icon">
 <link rel="stylesheet" type="text/css"  href="css/bootstrap.min.css">
 <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
-<link rel="stylesheet" type="text/css"  href="css/style.css">
+<link rel="stylesheet" type="text/css"  href="css/style.min.css">
 <link href="https://fonts.googleapis.com/css?family=Sacramento:300,400,500,600,700" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Raleway:300,400,500,600,700" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet">
@@ -228,6 +228,6 @@
 </div>
 <script type="text/javascript" src="js/jquery.1.11.1.js"></script>
 <script type="text/javascript" src="js/bootstrap.min.js"></script>
-<script type="text/javascript" src="js/main.js"></script>
+<script type="text/javascript" src="js/main.min.js"></script>
 </body>
 </html>
