--- a/index.html
+++ b/index.html
@@ -75,6 +75,15 @@
     </div>
   </div>
 </div>
+      <div id="google_translate_element"></div>
+
+<script type="text/javascript">
+function googleTranslateElementInit() {
+  new google.translate.TranslateElement({pageLanguage: 'en'}, 'google_translate_element');
+}
+</script>
+
+<script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 <!-- Atividades Desenvolvidas -->
 <div id="atividades-desenvolvidas">
   <div class="section-title text-center center">
