--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <![endif]-->
 </head>
 <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
+
 <nav id="menu" class="navbar navbar-default navbar-fixed-top">
   <div class="container">
     <div class="navbar-header">
@@ -36,10 +37,18 @@
         <li><a href="#atividades-desenvolvidas" class="page-scroll">Atividades Desenvolvidas</a></li>
         <li><a href="#colabore" class="page-scroll">Colabore</a></li>
         <li><a href="#contato" class="page-scroll">Contato</a></li>
+       <li><a href="#footer" class="page-scroll">Voluntário conosco!</a></li>
+        <li><a href="#contato" class="page-scroll">Donate</a></li>
       </ul>
     </div>
   </div>
 </nav>
+<div class="icon-bar">
+  <a href="https://www.facebook.com/projetovisaosocial/" target="_blank" class="facebook"><i class="fa fa-facebook"></i></a> 
+  <a href="https://twitter.com/SocialVisao" class="twitter"  target="_blank"><i class="fa fa-twitter"></i></a> 
+  <a href="https://www.instagram.com/projetovisaosocial/" target="_blank" class="instagram"><i class="fa fa-instagram"></i></a> 
+  <a href="https://www.youtube.com/channel/UCqaixVhjtwwFNFbK57zhxwA"  target="_blank" class="youtube"><i class="fa fa-youtube"></i></a> 
+</div>
 <!-- Cabeçalho -->
 <header id="header">
   <div class="intro">
@@ -79,7 +88,7 @@
 <div id="atividades-desenvolvidas">
   <div class="section-title text-center center">
     <div class="overlay">
-      <h2>Atividades Desenvolvidas</h2>
+      <h2>Atividades Desenvolvidas</h2> 
       <hr>
       <p>Aproximadamente 130 crianças e adolescentes são atendidos no projeto, de segunda à quinta-feira, das 8h às 17h. Além disso, prestamos assistência a famílias de algumas crianças, especialmente, com doação de alimentos.</p>
       <p>Conheça o que a Visão Social oferece:</p>
@@ -205,7 +214,7 @@
           <img class="img-responsive" src="img/simbolotelefone.png">
         </div>
         <div class="contato-texto">
-          <p>(61) 3485-4568, (61) 3012-5442<br>(61) 9 9127-6570, (61) 9 8466-0250</p>
+          <p>(61) 3485-4568, (61) 3012-5442<br>(61) 9 9127-6570, (61) 9 9999-2351</p>
         </div>
       </div>
     </div>
@@ -227,6 +236,7 @@
     </div>
   </div>
 </div>
+
 <script type="text/javascript" src="js/jquery.1.11.1.js"></script>
 <script type="text/javascript" src="js/bootstrap.min.js"></script>
 <script type="text/javascript" src="js/main.min.js"></script>
