--- a/index.html
+++ b/index.html
@@ -50,6 +50,14 @@
             <h1>Visão Social</h1>
             <p>Solidariedade é o amor em movimento.</p>
             <a href="#o-que-e" class="btn btn-custom btn-lg page-scroll">Conheça o Projeto</a> </div>
+              <div id="social">
+                <p>Siga a causa nas mídias sociais!</p>
+                <a class="facebookBtn smGlobalBtn" href="https://www.facebook.com/projetovisaosocial/" target=_blank ></a>
+                <a class="instagramBtn smGlobalBtn" href="https://www.instagram.com/projetovisaosocial/" target=_blank ></a>
+                <a class="youtubeBtn smGlobalBtn" href="https://www.youtube.com/channel/UCqaixVhjtwwFNFbK57zhxwA/featured" target=_blank ></a>
+                <a class="twitterBtn smGlobalBtn" href="https://twitter.com/SocialVisao" target=_blank ></a>
+      
+             </div>
         </div>
       </div>
     </div>
@@ -205,7 +213,7 @@
           <img class="img-responsive" src="img/simbolotelefone.png">
         </div>
         <div class="contato-texto">
-          <p>(61) 3485-4568, (61) 3012-5442<br>(61) 9 9127-6570, (61) 9 8466-0250</p>
+          <p>(61) 3485-4568, (61) 3012-5442<br>(61) 9 9127-6570, (61) 9 9999-2351</p>
         </div>
       </div>
     </div>
