--- a/index.html
+++ b/index.html
@@ -45,15 +45,18 @@
   <div class="intro">
     <div class="overlay">
       <div class="container">
-          <p align=left>do not remove</p>
         <div class="row">
-              <div id="google_translate_element"></div><script type="text/javascript">
-                  function googleTranslateElementInit() 
+          <br>
+          <br>
+          <br>
+          <br>
+          <div id="google_translate_element"></div><script type="text/javascript">
+function googleTranslateElementInit() 
               {
-  new google.translate.TranslateElement({pageLanguage: 'pt', layout: google.translate.TranslateElement.InlineLayout.SIMPLE}, 'google_translate_element');
-            }
+  new google.translate.TranslateElement({pageLanguage: 'pt'}, 'google_translate_element');
+              }
 </script><script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
-        
+
           <div class="intro-text">
             <h1>Visão Social</h1>
             <p>Solidariedade é o amor em movimento.</p>
