--- a/index.html
+++ b/index.html
@@ -46,13 +46,7 @@
     <div class="overlay">
       <div class="container">
         <div class="row">
-          <div id="google_translate_element"></div><script type="text/javascript">
-function googleTranslateElementInit() 
-              {
-  new google.translate.TranslateElement({pageLanguage: 'pt'}, 'google_translate_element');
-              }
-</script><script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
-
+          <div id="google_translate_element"></div>
           <div class="intro-text">
             <h1>Visão Social</h1>
             <p>Solidariedade é o amor em movimento.</p>
@@ -244,6 +238,12 @@ function googleTranslateElementInit()
 </div>
 <script type="text/javascript" src="js/jquery.1.11.1.js"></script>
 <script type="text/javascript" src="js/bootstrap.min.js"></script>
+<script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 <script type="text/javascript" src="js/main.min.js"></script>
+<script type="text/javascript">
+function googleTranslateElementInit() {
+  new google.translate.TranslateElement({pageLanguage: 'pt'}, 'google_translate_element');
+}
+</script>
 </body>
 </html>
