Adiciona dados bancários para recebimento de doações em dinheiro

--- a/index.html
+++ b/index.html
@@ -50,15 +50,15 @@
           <div class="intro-text">
             <h1>Visão Social</h1>
             <p>Solidariedade é o amor em movimento.</p>
-            <a href="#o-que-e" class="btn btn-custom btn-lg page-scroll">Conheça o Projeto</a> </div>
-              <div id="social">
-                <p>Siga a causa nas mídias sociais!</p>
-                <a class="facebookBtn smGlobalBtn" href="https://www.facebook.com/projetovisaosocial/" target=_blank ></a>
-                <a class="instagramBtn smGlobalBtn" href="https://www.instagram.com/projetovisaosocial/" target=_blank ></a>
-                <a class="youtubeBtn smGlobalBtn" href="https://www.youtube.com/channel/UCqaixVhjtwwFNFbK57zhxwA/featured" target=_blank ></a>
-                <a class="twitterBtn smGlobalBtn" href="https://twitter.com/SocialVisao" target=_blank ></a>
-      
-             </div>
+            <a href="#o-que-e" class="btn btn-custom btn-lg page-scroll">Conheça o Projeto</a> 
+          </div>
+          <div id="social">
+            <p>Siga a causa nas mídias sociais!</p>
+            <a class="facebookBtn smGlobalBtn" href="https://www.facebook.com/projetovisaosocial/" target=_blank ></a>
+            <a class="instagramBtn smGlobalBtn" href="https://www.instagram.com/projetovisaosocial/" target=_blank ></a>
+            <a class="youtubeBtn smGlobalBtn" href="https://www.youtube.com/channel/UCqaixVhjtwwFNFbK57zhxwA/featured" target=_blank ></a>
+            <a class="twitterBtn smGlobalBtn" href="https://twitter.com/SocialVisao" target=_blank ></a>
+          </div>
         </div>
       </div>
     </div>
@@ -79,6 +79,7 @@
           <p>A Visão Social foi criada para desenvolver atividades que resultem no aprimoramento do processo de ensino-aprendizagem e na redução das dificuldades escolares de crianças que passam por situações de conflito.</p>
           <p>Fazemos o possível para que elas possam alcançar o sonho de um futuro melhor. <3</p>
           <p>A Visão Social possui registro no CAS - Conselho de Assistência Social, no CDCA - Conselho da Criança e do Adolescente e também possui cadastro na Promotoria de Justiça do Distrito Federal.</p>
+          <a href="#colabore" class="btn btn-custom btn-lg page-scroll">Faça sua doação</a>
         </div>
       </div>
     </div>
@@ -127,7 +128,10 @@
   <div class="section-title text-center center">
     <div class="overlay">
       <h2>Colabore</h2>
-      <p>O projeto precisa muito da sua ajuda! São apenas dois voluntários fixos que auxiliam a organização e, além disso, não recebemos ajuda do governo. A Visão Social se mantêm exclusivamente por meio de doações. Veja como você pode colaborar:</p>
+      <p>O projeto precisa muito da sua ajuda! São apenas dois voluntários fixos que auxiliam a organização e, além disso, não recebemos ajuda do governo. A Visão Social se mantêm exclusivamente por meio de doações. Confira nossos dados bancários:</p>
+      <h3>Caixa Econômica Federal</h3>
+      <p>Agência: 0007<br>Operação: 003<br>Conta: 00004530-9<br>Projeto Visão Social<br>CNPJ: 08.846.463/0001-80</p>
+      <p>Você pode nos ajudar com qualquer quantia e também de outras formas:</p>
     </div>
   </div>
   <div class="container">
