--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
       <div class="col-sm-6 col-sm-offset-3">
         <div class="colabore-texto">
           <h3>Informática</h3>
-          <p>Temos apenas cinco computador para todas as crianças que atendemos. As que já estão em idade escolar precisam ter acesso à internet para fazer pesquisas para a escola. Se você tiver qualquer produto de informática em bom estado, nos avise. Podemos buscar. :)</p>
+          <p>Temos apenas cinco computadores para todas as crianças que atendemos. As que já estão em idade escolar precisam ter acesso à internet para fazer pesquisas para a escola. Se você tiver qualquer produto de informática em bom estado, nos avise. Podemos buscar. :)</p>
         </div>
         <div class="colabore-simbolo computador">
           <img class="img-responsive" src="img/simbolocomputador.png">
