--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Visão Social</title>
 <meta name="description" content="O Projeto Visão Social é uma organização sem fins lucrativos que tem como missão transformar a história de crianças, jovens e famílias em complexas situações de risco.">
-<meta name="author" content="Hebert Júlio, Adriano Ramos">
+<meta name="author" content="Hebert Júlio, Adriano Ramos, Mateus Gomes">
 <meta name="google-site-verification" content="e8BvpG88YBV4vlG_9GI-DFTq2CirTLXoL3cdTwHoaMA" />
 <link rel="shortcut icon" href="img/favicon-32x32.ico" type="image/x-icon">
 <link rel="stylesheet" type="text/css"  href="css/bootstrap.min.css">
@@ -233,7 +233,13 @@
             <a href="https://www.facebook.com/projetovisaosocial" target="_blank">
               <i class="fa fa-facebook"></i>
               <span class="facebook-texto">@projetovisaosocial</span>
+              
             </a>
+          </li>
+          <li>
+              <a href="" target="_blank">
+                    <span class="facebook-texto">Trabalhe Conosco</span>
+              </a>
           </li>
         </ul>
       </div>
