--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
             </a>
           </li>
           <li>
-              <a href="" target="_blank">
+              <a href="EDITAL_N_001.pdf" target="_blank">
                     <span class="facebook-texto">Trabalhe Conosco</span>
               </a>
           </li>
